--- a/index.html
+++ b/index.html
@@ -77,57 +77,71 @@
               <div class="field">
                 <label class="label">Agence</label>
                 <div class="control">
-                  <select class="input" name="agency" id="agency" required>
-                    <option value="" disabled selected>Select an Agence</option>
-                    <option value="El Harrouch">El Harrouch</option>
-        <option value="Azzaba">Azzaba</option>
-        <option value="Collo">Collo</option>
-        <option value="Skikda">Skikda</option>
-                    <option value="El Khroub">El Khroub</option>
-                    <option value="Ali Mendjeli">Ali Mendjeli</option>
-                    <option value="sidi mebrouk">sidi mebrouk</option>
-                    <option value="El Milia">El Milia</option>
-                    <option value="Taher">Taher</option>
-                    <option value="Tébessa">Tébessa</option>
-                    <option value="Ain Mlila">Ain Mlila</option>
-                    <option value="Ténes">Ténes</option>
-                    <option value="Chlef">Chlef</option>
-                    <option value="Khemis Miliana">Khemis Miliana</option>
-                    <option value="Aïn Defla">Aïn Defla</option>
-                    <option value="Tlemcen">Tlemcen</option>
-                    <option value="Remchi">Remchi</option>
-                    <option value="Mecheria">Mecheria</option>
-                    <option value="Illizi">Illizi</option>
-                    <option value="Djelfa">Djelfa</option>
-                    <option value="Tamanrasset">Tamanrasset</option>
-                    <option value="Ouargla">Ouargla</option>
-                    <option value="Ghardaïa">Ghardaïa</option>
-                    <option value="Sidi Bel Abbes">Sidi Bel Abbes</option>
-                    <option value="Beni Saf">Beni Saf</option>
-                    <option value="Oran">Oran</option>
-                    <option value="Arzew">Arzew</option>
-                    <option value="Oued Rhiou">Oued Rhiou</option>
-                    <option value="Mostaganem">Mostaganem</option>
-                    <option value="Reghaïa">Reghaïa</option>
-                    <option value="Baraki">Baraki</option>
-                    <option value="Dar El Beïda">Dar El Beïda</option>
-                    <option value="Zeralda">Zeralda</option>
-                    <option value="Ouled Fayet">Ouled Fayet</option>
-                    <option value="Draria">Draria</option>
-                    <option value="Alger Centre">Alger Centre</option>
-                    <option value="Bab El Oued">Bab El Oued</option>
-                    <option value="Birtouta">Birtouta</option>
-                    <option value="Médéa">Médéa</option>
-                    <option value="Blida">Blida</option>
-                    <option value="Boufarik">Boufarik</option>
-                    <option value="Cherchell">Cherchell</option>
-                    <option value="El Kseur">El Kseur</option>
-                    <option value="Béjaïa">Béjaïa</option>
-                    <option value="Sor El Ghozlane">Sor El Ghozlane</option>
-                    <option value="Bordj Menaiel">Bordj Menaiel</option>
-                    <option value="Tizi Ouzzou">Tizi Ouzzou</option>
-                    <option value="Tizi Ghenif">Tizi Ghenif</option>
-                  </select>
+                   <select class="input" name="agency" id="agency" required>
+    <option value="" disabled selected>Select an Agence</option>
+    <option value="Aïn Defla">Aïn Defla</option>
+    <option value="Ain Mlila">Ain Mlila</option>
+    <option value="Ain Oulméne">Ain Oulméne</option>
+    <option value="Ali Mendjeli">Ali Mendjeli</option>
+    <option value="Annaba">Annaba</option>
+    <option value="Arzew">Arzew</option>
+    <option value="Azzaba">Azzaba</option>
+    <option value="Bab El Oued">Bab El Oued</option>
+    <option value="Baraki">Baraki</option>
+    <option value="Barika">Barika</option>
+    <option value="Batna">Batna</option>
+    <option value="Béjaïa">Béjaïa</option>
+    <option value="Beni Saf">Beni Saf</option>
+    <option value="Berhoum">Berhoum</option>
+    <option value="Birtouta">Birtouta</option>
+    <option value="Blida">Blida</option>
+    <option value="Bordj Bou Arreridj">Bordj Bou Arreridj</option>
+    <option value="Bordj Menaiel">Bordj Menaiel</option>
+    <option value="Boufarik">Boufarik</option>
+    <option value="Bougaa">Bougaa</option>
+    <option value="Bousaada">Bousaada</option>
+    <option value="Chlef">Chlef</option>
+    <option value="Cherchell">Cherchell</option>
+    <option value="CHU">CHU</option>
+    <option value="Collo">Collo</option>
+    <option value="Dar El Beïda">Dar El Beïda</option>
+    <option value="Djelfa">Djelfa</option>
+    <option value="Draria">Draria</option>
+    <option value="El Bouni Djemaa">El Bouni Djemaa</option>
+    <option value="El Eulma">El Eulma</option>
+    <option value="El Harrouch">El Harrouch</option>
+    <option value="El Hidhab">El Hidhab</option>
+    <option value="El Khroub">El Khroub</option>
+    <option value="El Kseur">El Kseur</option>
+    <option value="El Milia">El Milia</option>
+    <option value="Ghardaïa">Ghardaïa</option>
+    <option value="Illizi">Illizi</option>
+    <option value="Khemis Miliana">Khemis Miliana</option>
+    <option value="Médéa">Médéa</option>
+    <option value="Mecheria">Mecheria</option>
+    <option value="Mostaganem">Mostaganem</option>
+    <option value="Oran">Oran</option>
+    <option value="Ouargla">Ouargla</option>
+    <option value="Oued Rhiou">Oued Rhiou</option>
+    <option value="Oued Znati">Oued Znati</option>
+    <option value="Ouled Fayet">Ouled Fayet</option>
+    <option value="Remchi">Remchi</option>
+    <option value="Reghaïa">Reghaïa</option>
+    <option value="Sidi Bel Abbes">Sidi Bel Abbes</option>
+    <option value="sidi mebrouk">sidi mebrouk</option>
+    <option value="Skikda">Skikda</option>
+    <option value="Sor El Ghozlane">Sor El Ghozlane</option>
+    <option value="Taher">Taher</option>
+    <option value="Tamanrasset">Tamanrasset</option>
+    <option value="Tébessa">Tébessa</option>
+    <option value="Ténes">Ténes</option>
+    <option value="Tizi Ghenif">Tizi Ghenif</option>
+    <option value="Tizi Ouzzou">Tizi Ouzzou</option>
+    <option value="Tolga">Tolga</option>
+    <option value="Tlemcen">Tlemcen</option>
+    <option value="Zeralda">Zeralda</option>
+</select>
+
                 </div>
               </div>
             </div>
