--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="field">
               <label class="label">Résidence</label>
               <div class="control">
-                <input class="input" type="text" name="Residence" required>
+                <input class="input" type="text" name="residence" required>
               </div>
             </div>
           </div>
