--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="columns">
             <div class="column">
               <div class="field">
-                <label class="label">اللقب</label>
+                <label class="label" has-text-centered>اللقب</label>
                 <div class="control">
                   <input class="input" type="text" name="firstName" placeholder="First Name" required>
                 </div>
@@ -37,7 +37,7 @@
             </div>
             <div class="column">
               <div class="field">
-                <label class="label">الاسم</label>
+                <label class="label" has-text-centered>الاسم</label>
                 <div class="control">
                   <input class="input" type="text" name="lastName" placeholder="Last Name" required>
                 </div>
