--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="columns">
             <div class="column">
               <div class="field">
-                <label class="label">Phone Number</label>
+                <label class="label" title-center>Phone Number</label>
                 <div class="control">
                   <input class="input" type="tel" name="phoneNumber" placeholder="Phone Number" required>
                 </div>
