--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-
+ <div class="columns">
           <div class="column">
             <div class="field">
               <label class="label">RC Number or Card Number</label>
@@ -167,6 +167,7 @@
               </div>
             </div>
           </div>
+    </div>
             <div class="column">
             <div class="field">
               <label class="label">Date De Naissance</label>
