--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             </div>
           </div>
     </div>
+          <div class="columns">
             <div class="column">
             <div class="field">
               <label class="label">Date De Naissance</label>
@@ -184,7 +185,8 @@
               </div>
             </div>
           </div>
-
+             </div>
+<div class="columns">
           <div class="column">
             <div class="field">
               <label class="label">NIS</label>
@@ -203,6 +205,7 @@
               </div>
             </div>
           </div>
+   </div>
 
           <div class="column">
             <div class="field">
