--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="field">
                 <label class="label" >Phone Number</label>
                 <div class="control">
-                  <input class="input" type="tel" name="phoneNumber" placeholder="Phone Number" required>
+                  <input class="input" type="tel" name="phoneNumber" placeholder="" required>
                 </div>
               </div>
             </div>
@@ -62,7 +62,7 @@
               <div class="field">
                 <label class="label">Email</label>
                 <div class="control">
-                  <input class="input" type="email" name="email" placeholder="Email" required>
+                  <input class="input" type="email" name="email" placeholder="" required>
                 </div>
               </div>
             </div>
@@ -73,7 +73,7 @@
               <div class="field">
                 <label class="label">Boutique Name</label>
                 <div class="control">
-                  <input class="input" type="text" name="boutiqueName" placeholder="Boutique Name" required>
+                  <input class="input" type="text" name="boutiqueName" placeholder="" required>
                 </div>
               </div>
             </div>
@@ -155,7 +155,7 @@
             <div class="field">
               <label class="label">RC Number or Card Number</label>
               <div class="control">
-                <input class="input" type="text" name="cardNumber" placeholder="Card Number" required>
+                <input class="input" type="text" name="cardNumber" placeholder="" required>
               </div>
             </div>
           </div>
@@ -173,7 +173,7 @@
             <div class="field">
               <label class="label">Date De Naissance</label>
               <div class="control">
-                <input class="input" type="text" name="dob" placeholder="Card Number" required>
+                <input class="input" type="text" name="dob" placeholder="" required>
               </div>
             </div>
           </div>
@@ -191,7 +191,7 @@
             <div class="field">
               <label class="label">NIS</label>
               <div class="control">
-                <input class="input" type="text" name="nis" placeholder="Numero RC">
+                <input class="input" type="text" name="nis" placeholder="">
               </div>
             </div>
           </div>
@@ -201,7 +201,7 @@
             <div class="field">
               <label class="label">AI</label>
               <div class="control">
-                <input class="input" type="text" name="ai" placeholder="NIF">
+                <input class="input" type="text" name="ai" placeholder="">
               </div>
             </div>
           </div>
@@ -209,9 +209,9 @@
 
           <div class="column">
             <div class="field">
-              <label class="label">Address</label>
+              <label class="label">Address RC</label>
               <div class="control">
-                <input class="input" type="text" name="address" placeholder="Address">
+                <input class="input" type="text" name="address" placeholder="">
               </div>
             </div>
           </div>
