--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <div class="field">
                 <label class="label" >اللقب</label>
                 <div class="control">
-                  <input class="input" type="text" name="firstName" placeholder="First Name" required>
+                  <input class="input" type="text" name="firstName" placeholder="" required>
                 </div>
               </div>
             </div>
@@ -43,7 +43,7 @@
               <div class="field">
                 <label class="label" >الاسم</label>
                 <div class="control">
-                  <input class="input" type="text" name="lastName" placeholder="Last Name" required>
+                  <input class="input" type="text" name="lastName" placeholder="" required>
                 </div>
               </div>
             </div>
