--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <label class="label">Agence</label>
                 <div class="control">
                    <select class="input" name="agency" id="agency" required>
-    <option value="" disabled selected>Select an Agence</option>
+    <option value="" disabled selected text-align: center>Select an Agence</option>
     <option value="Aïn Defla">Aïn Defla</option>
     <option value="Ain Mlila">Ain Mlila</option>
     <option value="Ain Oulméne">Ain Oulméne</option>
