--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
           </div>
 
-
+ <!--
           <div class="column">
             <div class="field">
               <label class="label">AI</label>
@@ -204,9 +204,9 @@
                 <input class="input" type="text" name="ai" placeholder="">
               </div>
             </div>
-          </div>
+          </div> -->
    </div>
-
+<!--
           <div class="column">
             <div class="field">
               <label class="label">Address RC</label>
@@ -214,7 +214,7 @@
                 <input class="input" type="text" name="address" placeholder="">
               </div>
             </div>
-          </div>
+          </div>   -->
 
           <div class="column">
             <div class="field">
@@ -226,7 +226,7 @@
           </div>
         </form>
       </div>
-    </div>
+    </div>  
   </section>
 
   <script>
