--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="columns">
             <div class="column">
               <div class="field">
-                <label class="label" >Phone Number</label>
+                <label class="label" >رقم الهاتف</label>
                 <div class="control">
                   <input class="input" type="tel" name="phoneNumber" placeholder="" required>
                 </div>
@@ -60,7 +60,7 @@
             </div>
             <div class="column">
               <div class="field">
-                <label class="label">Email</label>
+                <label class="label">البريد الالكتروني</label>
                 <div class="control">
                   <input class="input" type="email" name="email" placeholder="" required>
                 </div>
@@ -71,7 +71,7 @@
           <div class="columns">
             <div class="column">
               <div class="field">
-                <label class="label">Boutique Name</label>
+                <label class="label">اسم متجرك</label>
                 <div class="control">
                   <input class="input" type="text" name="boutiqueName" placeholder="" required>
                 </div>
@@ -79,10 +79,10 @@
             </div>
             <div class="column">
               <div class="field">
-                <label class="label">Agence</label>
+                <label class="label">الوكالة</label>
                 <div class="control">
                    <select class="input" name="agency" id="agency" required>
-    <option value="" disabled selected text-align: center>Select an Agence</option>
+    <option value="" disabled selected text-align: center>اختر المكتب</option>
     <option value="Aïn Defla">Aïn Defla</option>
     <option value="Ain Mlila">Ain Mlila</option>
     <option value="Ain Oulméne">Ain Oulméne</option>
@@ -153,7 +153,7 @@
  <div class="columns">
           <div class="column">
             <div class="field">
-              <label class="label">RC Number or Card Number</label>
+              <label class="label">رقم السجل التجاري او بطاقة التعريف</label>
               <div class="control">
                 <input class="input" type="text" name="cardNumber" placeholder="" required>
               </div>
@@ -161,7 +161,7 @@
           </div>
           <div class="column">
             <div class="field">
-              <label class="label">NIF or Delivery Date</label>
+              <label class="label">NIF تاريخ اصدار البطاقة أو</label>
               <div class="control">
                 <input class="input" type="text" name="nif" required>
               </div>
@@ -171,7 +171,7 @@
           <div class="columns">
             <div class="column">
             <div class="field">
-              <label class="label">Date De Naissance</label>
+              <label class="label">تاريخ الميلاد</label>
               <div class="control">
                 <input class="input" type="text" name="dob" placeholder="" required>
               </div>
@@ -179,13 +179,13 @@
           </div>
           <div class="column">
             <div class="field">
-              <label class="label">Résidence</label>
+              <label class="label">الإقامة</label>
               <div class="control">
                 <input class="input" type="text" name="residence" required>
               </div>
             </div>
           </div>
-             </div>
+             </div> <!--
 <div class="columns">
           <div class="column">
             <div class="field">
@@ -196,7 +196,7 @@
             </div>
           </div>
 
- <!--
+ 
           <div class="column">
             <div class="field">
               <label class="label">AI</label>
