--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="columns">
             <div class="column">
               <div class="field">
-                <label class="label" >اللقب</label>
+                <label class="label" >NOM</label>
                 <div class="control">
                   <input class="input" type="text" name="firstName" placeholder="" required>
                 </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="column">
               <div class="field">
-                <label class="label" >الاسم</label>
+                <label class="label" >PRENOM</label>
                 <div class="control">
                   <input class="input" type="text" name="lastName" placeholder="" required>
                 </div>
@@ -52,7 +52,7 @@
           <div class="columns">
             <div class="column">
               <div class="field">
-                <label class="label" >رقم الهاتف</label>
+                <label class="label" >N° TELEPHONE</label>
                 <div class="control">
                   <input class="input" type="tel" name="phoneNumber" placeholder="" required>
                 </div>
@@ -60,7 +60,7 @@
             </div>
             <div class="column">
               <div class="field">
-                <label class="label">البريد الالكتروني</label>
+                <label class="label">E-MAIL</label>
                 <div class="control">
                   <input class="input" type="email" name="email" placeholder="" required>
                 </div>
@@ -71,7 +71,7 @@
           <div class="columns">
             <div class="column">
               <div class="field">
-                <label class="label">اسم متجرك</label>
+                <label class="label">NOM DE BOUTIQUE</label>
                 <div class="control">
                   <input class="input" type="text" name="boutiqueName" placeholder="" required>
                 </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="column">
               <div class="field">
-                <label class="label">الوكالة</label>
+                <label class="label">AGENCE</label>
                 <div class="control">
                    <select class="input" name="agency" id="agency" required>
     <option value="" disabled selected text-align: center>اختر المكتب</option>
@@ -153,7 +153,7 @@
  <div class="columns">
           <div class="column">
             <div class="field">
-              <label class="label">رقم السجل التجاري او بطاقة التعريف</label>
+              <label class="label">RC / Pièce d’identité</label>
               <div class="control">
                 <input class="input" type="text" name="cardNumber" placeholder="" required>
               </div>
@@ -161,7 +161,7 @@
           </div>
           <div class="column">
             <div class="field">
-              <label class="label">NIF تاريخ اصدار البطاقة أو</label>
+              <label class="label">NIF / Date de délivrance</label>
               <div class="control">
                 <input class="input" type="text" name="nif" required>
               </div>
@@ -171,7 +171,7 @@
           <div class="columns">
             <div class="column">
             <div class="field">
-              <label class="label">تاريخ الميلاد</label>
+              <label class="label">DATE DE NAISSANCE</label>
               <div class="control">
                 <input class="input" type="text" name="dob" placeholder="" required>
               </div>
@@ -179,7 +179,7 @@
           </div>
           <div class="column">
             <div class="field">
-              <label class="label">الإقامة</label>
+              <label class="label">Résidence</label>
               <div class="control">
                 <input class="input" type="text" name="residence" required>
               </div>
