--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <label class="label">AGENCE</label>
                 <div class="control">
                    <select class="input" name="agency" id="agency" required>
-    <option value="" disabled selected text-align: center>اختر المكتب</option>
+    <option value="" disabled selected text-align: center></option>
     <option value="Aïn Defla">Aïn Defla</option>
     <option value="Ain Mlila">Ain Mlila</option>
     <option value="Ain Oulméne">Ain Oulméne</option>
